# car_ros_linux

./: arInfor.log.2023-03-18
.history/hand_model/scripts/: main_control_20230220221843.py  main_control_20230305122110.py  (+45 more)
hand_model/: CMakeLists.txt  package.xml
hand_model/launch/: main_control.launch  main_control_no_init.launch
hand_model/scripts/: get_robot_map.py  goMeter.py  main_control.py  send_nav_goal.py  setInitPose.py  stop_move.py  stop_nav_goal.py  test2.py  test3.py
hps_camera/: CMakeLists.txt  package.xml
hps_camera/include/: HPS3DBase_IF.h  HPS3DUser_IF.h
hps_camera/src/: HPS3DUser_IF.c  hps_camera.cpp
motor_drive/: CMakeLists.txt  package.xml
motor_drive/include/motor_drive/: can_drive.h
motor_drive/launch/: info_motor_drive.launch  info_motor_drive_dock.launch  info_motor_drive_nolidar.launch
motor_drive/scripts/: common_map.py  common_nav.py  common_nav_backup.py  sub.py
motor_drive/src/: can_drive.cpp  motor_drive.cpp
mrobot_teleop/: arInfor.log.2022-12-11
mrobot_teleop/launch/: mrobot_teleop_key.launch
mrobot_teleop/scripts/: arInfor.log.2023-02-27  carControl.py  getArRadius.py  logger.py  mqtt_config.py  mrobot_teleop_key (copy).py  temp.py  test.py  testInformation.py
turtle_pub/: CMakeLists.txt  package.xml
turtle_pub/script/: turtle_pub.py  turtle_sub.py
turtle_pub/src/: turtle_publisher.cpp  turtle_subscribe.cpp
zdp_bot/: CMakeLists.txt  package.xml
zdp_bot/launch/: display.launch  gazebo.launch
zdp_bot/meshes/: Laser_Link.STL  base_link.STL
zdp_bot/urdf/: zdp_bot(origin).urdf  zdp_bot.csv  zdp_bot.urdf
(+61 files in other folders)
